Blurry placeholder is back. Inline aspect-ratio property added to img tag in order to avoid glitch size on safari.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -224,7 +224,7 @@ a {
       width: inherit;
       height: inherit;
       object-fit: contain;
-      object-position: top;
+      object-position: top left;
     }
   }
 }
@@ -292,7 +292,7 @@ a {
   z-index: 9999;
   opacity: 0;
   overflow: hidden;
-  background-color: red;
+  background-color: var(--color-pirmary);
   img {
     width: 100%;
     height: 100%;
